[Steven] feat(categories) - add new menu categories
